syntax = "proto3";
package Processer;

enum Functions{
    ProcessMessage=0;
}
